(lang dune 3.15)

(name rosettaboy)

(generate_opam_files true)

(source
 (github shish/rosettaboy))

(authors "Shish")

(maintainers "Shish")

(license LICENSE)

(documentation https://github.com/shish/rosettaboy)

(package
 (name rosettaboy)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
