cargo-features = ["named-profiles"]

[package]
name = "rosettaboy-rs"
version = "0.1.0"
authors = ["Shish <shish@shishnet.org>"]
edition = "2021"

[dependencies]
sdl2 = { version = "0.35.2", features = ["unsafe_textures"] }
num_enum = "0.5.7"
bitflags = "*"
packed_struct = "0.10.0"
packed_struct_codegen = "0.10.0"
anyhow = "1"
clap = { version = "3.1.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release-lto]
inherits = "release"
lto = true