[package]
name = "rosettaboy-rs"
version = "0.1.0"
authors = ["Shish <shish@shishnet.org>"]
edition = "2021"

[dependencies]
sdl2 = { version = "0.36.0", features = ["unsafe_textures"] }
num_enum = "0.7.2"
bitflags = "2.5.0"
packed_struct = "0.10.0"
packed_struct_codegen = "0.10.0"
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
divan = "0.1.0"

[profile.release-lto]
inherits = "release"
lto = true

[dev-dependencies]
divan = "0.1.0"

[[bench]]
name = "scratch"
harness = false
